--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<div class="container">
 							<div class="col-md-10 col-md-offset-1">
 								<div class="animate-box">
-									<h1>Karla TO=oledo</h1>
+									<h1>Karla Toledo</h1>
 									<h2>By  Toledoku</h2>
 									
 								</div>
@@ -98,19 +98,8 @@
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li class="active"><a href="index.html" >Home</a></li>
-							<li>
-								<a href="groom-bride.html" class="fh5co-sub-ddown">Groom &amp; Bride</a>
-								<ul class="fh5co-sub-menu">
-									<li><a href="#">Dropdown Menu 1</a></li>
-									<li><a href="#">Dropdown Menu 2</a></li>
-									<li><a href="#">Dropdown Menu 3</a></li>
-									<li><a href="#">Dropdown Menu 4</a></li>
-								</ul>
-							</li>
-							<li><a href="when-where.html">When &amp; Where</a></li>
-							<li><a href="guest.html">Guest</a></li>
+		
 							<li><a href="gallery.html">Gallery</a></li>
-							<li><a href="blog.html">Blog</a></li>
 						</ul>
 					</nav>
 				</div>
