--- a/gallery.html
+++ b/gallery.html
@@ -96,9 +96,9 @@
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
+							<li><a href="index.html" >Home</a></li>
 
 							<li class="active"><a href="gallery.html">Gallery</a></li>
-
 						</ul>
 					</nav>
 				</div>
