--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Nuptial &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Gallery</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -39,7 +39,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+
 	
 	<link href="https://fonts.googleapis.com/css?family=Montez" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
@@ -64,29 +64,32 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+	
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content=" width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="http://duruthemes.com/demo/html/pozo/light/images/favicon.png">
+    <title>P O Z O</title>
+    <link href="./P O Z O_files/css/animate.css" rel="stylesheet" type="text/css">
+    <link href="./P O Z O_files/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="./P O Z O_files/css/font-awesome.css" rel="stylesheet" type="text/css">
+    <link href="./P O Z O_files/css/swiper.css" rel="stylesheet" type="text/css">
+    <link href="./P O Z O_files/css/style.css" rel="stylesheet" type="text/css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script type="text/javascript" async="" src="./P O Z O_files/analytics.js"></script><script async="" src="./P O Z O_files/js"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-144098545-1');
+    </script>
 
 	</head>
 	<body>
 		<div id="fh5co-wrapper">
 		<div id="fh5co-page">
 	
-		<div class="fh5co-hero" data-section="home">
-			<div class="fh5co-overlay"></div>
-			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/cover_bg_1.jpg);">
-				<div class="display-t">
-					<div class="display-tc">
-						<div class="container">
-							<div class="col-md-10 col-md-offset-1">
-								<div class="animate-box">
-									<h1>Nuptial</h1>
-									<h2>Our Gallery</h2>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+
 
 		<header id="fh5co-header-section" class="sticky-banner">
 			<div class="container">
@@ -107,99 +110,99 @@
 
 		<!-- end:header-top -->
 
-		<div id="fh5co-gallery">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-						<h2>Wedding Gallery</h2>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4">
-						<div class="gallery animate-box">
-							<a class="gallery-img image-popup image-popup" href="images/g1.jpg"><img src="images/g1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-						</div>
-						<div class="gallery animate-box">
-							<a class="gallery-img image-popup" href="images/g2.jpg"><img src="images/g2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="gallery animate-box">
-							<a class="gallery-img image-popup" href="images/g3.jpg"><img src="images/g3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-						</div>
-						<div class="gallery animate-box">
-							<a class="gallery-img image-popup" href="images/g4.jpg"><img src="images/g4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-						</div>
-						<div class="gallery animate-box">
-							<a class="gallery-img image-popup" href="images/g5.jpg"><img src="images/g5.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="gallery animate-box">
-							<a class="gallery-img image-popup" href="images/g6.jpg"><img src="images/g6.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-						</div>
-						<div class="gallery animate-box">
-							<a class="gallery-img image-popup" href="images/g7.jpg"><img src="images/g7.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+		<section class="projects pt-130 mb-60">
+            <div class="container">
+                <div class="row">
+                    <div class="section-head col-md-12 text-center animate-box fadeInUp animated" data-animate-effect="fadeInUp">
+                        <h4>Projects</h4>
+                    </div>
+                    <div class="col-md-4 animate-box fadeInUp animated" data-animate-effect="fadeInUp">
+                        <div class="item">
+                            <div class="position-re o-hidden"> <img src="images/15años/DSC_0836.jpg" alt=""> </div>
+                            <div class="con"> <span class="category">
+                                    <a href="15años.html">01.</a>
+                                </span>
+                                <h5><a href="15años.html">15 años</a></h5> <a href="15años.html"><i class="fa fa-long-arrow-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 animate-box fadeInUp animated" data-animate-effect="fadeInUp">
+                        <div class="item">
+                            <div class="position-re o-hidden"> <img src="images/Social media--empresa/DSC_0005.jpg" alt=""> </div>
+                            <div class="con"> <span class="category">
+                                    <a href="SOCIAL_MEDIA_ EMPRESA.html">02.</a>
+                                </span>
+                                <h5><a href="SOCIAL_MEDIA_ EMPRESA.html">SOCIAL MEDIA / EMPRESA</a></h5> <a href="SOCIAL_MEDIA_ EMPRESA.html"><i class="fa fa-long-arrow-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 animate-box fadeInUp animated" data-animate-effect="fadeInUp">
+                        <div class="item">
+                            <div class="position-re o-hidden"> <img src="images/BABY_PHOTOSHOOT/DSC_0266_1.jpg" alt=""> </div>
+                            <div class="con"> <span class="category">
+                                    <a href="BABY_PHOTOSHOOT.html">03.</a>
+                                </span>
+                                <h5><a href="BABY_PHOTOSHOOT.html">BABY PHOTOSHOOT</a></h5> <a href="BABY_PHOTOSHOOT.html"><i class="fa fa-long-arrow-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 animate-box fadeInUp animated" data-animate-effect="fadeInUp">
+                        <div class="item">
+                            <div class="position-re o-hidden"> <img src="./P O Z O_files/04.jpg" alt=""> </div>
+                            <div class="con"> <span class="category">
+                                    <a href="http://duruthemes.com/demo/html/pozo/light/project-page.html">04.</a>
+                                </span>
+                                <h5><a href="http://duruthemes.com/demo/html/pozo/light/project-page.html">Product Photography</a></h5> <a href="http://duruthemes.com/demo/html/pozo/light/project-page.html"><i class="fa fa-long-arrow-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 animate-box fadeInUp animated" data-animate-effect="fadeInUp">
+                        <div class="item">
+                            <div class="position-re o-hidden"> <img src="./P O Z O_files/01.jpg" alt=""> </div>
+                            <div class="con"> <span class="category">
+                                    <a href="http://duruthemes.com/demo/html/pozo/light/project-page.html">05.</a>
+                                </span>
+                                <h5><a href="http://duruthemes.com/demo/html/pozo/light/project-page.html">Fashion Photography</a></h5> <a href="http://duruthemes.com/demo/html/pozo/light/project-page.html"><i class="fa fa-long-arrow-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 animate-box fadeInUp animated" data-animate-effect="fadeInUp">
+                        <div class="item">
+                            <div class="position-re o-hidden"> <img src="./P O Z O_files/03.jpg" alt=""> </div>
+                            <div class="con"> <span class="category">
+                                    <a href="http://duruthemes.com/demo/html/pozo/light/project-page.html">06.</a>
+                                </span>
+                                <h5><a href="http://duruthemes.com/demo/html/pozo/light/project-page.html">Sport Photography</a></h5> <a href="http://duruthemes.com/demo/html/pozo/light/project-page.html"><i class="fa fa-long-arrow-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 		
 		<div id="fh5co-started" style="background-image:url(images/cover_bg_2.jpg);"data-stellar-background-ratio="0.5">
-		<div class="overlay"></div>
-			<div class="container">
-				<div class="row animate-box">
-					<div class="col-md-8 col-md-offset-2 text-center heading-section">
-						<h2>Are You Attending?</h2>
-						<p>Please Fill-up the form to notify you that you're attending. Thanks.
-					</div>
-				</div>
-				<div class="row animate-box">
-					<div class="col-md-10 col-md-offset-1">
-						<form class="form-inline">
-							<div class="col-md-4 col-sm-4">
-								<div class="form-group">
-									<label for="name" class="sr-only">Name</label>
-									<input type="name" class="form-control" id="name" placeholder="Name">
-								</div>
-							</div>
-							<div class="col-md-4 col-sm-4">
-								<div class="form-group">
-									<label for="email" class="sr-only">Email</label>
-									<input type="email" class="form-control" id="email" placeholder="Email">
-								</div>
-							</div>
-							<div class="col-md-4 col-sm-4">
-								<button type="submit" class="btn btn-primary btn-block">I am Attending</button>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
 
-		<footer>
-			<div id="footer">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12 text-center">
-							<h2>Jack &amp; Rose</h2>
-						</div>
-						<div class="col-md-6 col-md-offset-3 text-center">
-							<p class="fh5co-social-icons">
-								<a href="#"><i class="icon-twitter2"></i></a>
-								<a href="#"><i class="icon-facebook2"></i></a>
-								<a href="#"><i class="icon-instagram"></i></a>
-								<a href="#"><i class="icon-dribbble2"></i></a>
-								<a href="#"><i class="icon-youtube"></i></a>
-							</p>
-							<p>Copyright 2016 Free Html5 <a href="#">Module</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
+
+			<footer>
+				<div id="footer">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-12 text-center">
+								<h2>By Toledoki</h2>
+							</div>
+							<div class="col-md-6 col-md-offset-3 text-center">
+								<p class="fh5co-social-icons">
+									<a href="#"><i class="icon-twitter2"></i></a>
+									<a href="#"><i class="icon-facebook2"></i></a>
+									<a href="https://www.instagram.com/bytoledoki/?hl=es-la"><i class="icon-instagram"></i></a>
+									<a href="#"><i class="icon-dribbble2"></i></a>
+									<a href="#"><i class="icon-youtube"></i></a>
+								</p>
+								</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</footer>
+			</footer>
 
 	
 
@@ -208,6 +211,12 @@
 
 	</div>
 	<!-- END fh5co-wrapper -->
+	<script src="./P O Z O_files/jquery-3.3.1.min.js"></script>
+    <script src="./P O Z O_files/bootstrap.min.js"></script>
+    <script src="./P O Z O_files/modernizr-2.6.2.min.js"></script>
+    <script src="./P O Z O_files/jquery.waypoints.min.js"></script>
+    <script src="./P O Z O_files/swiper.min.js"></script>
+    <script src="./P O Z O_files/script.js"></script>
 
 	<!-- Google Map -->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
