--- a/gallery.html
+++ b/gallery.html
@@ -148,31 +148,31 @@
                     </div>
                     <div class="col-md-4 animate-box fadeInUp animated" data-animate-effect="fadeInUp">
                         <div class="item">
-                            <div class="position-re o-hidden"> <img src="./P O Z O_files/04.jpg" alt=""> </div>
+                            <div class="position-re o-hidden"> <img src="images/WEDDING_PHOTOS/DSC_0701.jpg" alt=""> </div>
                             <div class="con"> <span class="category">
-                                    <a href="http://duruthemes.com/demo/html/pozo/light/project-page.html">04.</a>
+                                    <a href="WEDDING_PHOTOS.html">04.</a>
                                 </span>
-                                <h5><a href="http://duruthemes.com/demo/html/pozo/light/project-page.html">Product Photography</a></h5> <a href="http://duruthemes.com/demo/html/pozo/light/project-page.html"><i class="fa fa-long-arrow-right"></i></a>
+                                <h5><a href="WEDDING_PHOTOS.html">WEDDING PHOTOS</a></h5> <a href="WEDDING_PHOTOS.html"><i class="fa fa-long-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 animate-box fadeInUp animated" data-animate-effect="fadeInUp">
                         <div class="item">
-                            <div class="position-re o-hidden"> <img src="./P O Z O_files/01.jpg" alt=""> </div>
+                            <div class="position-re o-hidden"> <img src="images/BRIDAL_SHOWER/DSC_0442.jpg" alt=""> </div>
                             <div class="con"> <span class="category">
-                                    <a href="http://duruthemes.com/demo/html/pozo/light/project-page.html">05.</a>
+                                    <a href="BRIDAL_SHOWER.html">05.</a>
                                 </span>
-                                <h5><a href="http://duruthemes.com/demo/html/pozo/light/project-page.html">Fashion Photography</a></h5> <a href="http://duruthemes.com/demo/html/pozo/light/project-page.html"><i class="fa fa-long-arrow-right"></i></a>
+                                <h5><a href="BRIDAL_SHOWER.html">BRIDAL SHOWER</a></h5> <a href="BRIDAL_SHOWER.html"><i class="fa fa-long-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 animate-box fadeInUp animated" data-animate-effect="fadeInUp">
                         <div class="item">
-                            <div class="position-re o-hidden"> <img src="./P O Z O_files/03.jpg" alt=""> </div>
+                            <div class="position-re o-hidden"> <img src="images/portraits/DSC_0188.jpg" alt=""> </div>
                             <div class="con"> <span class="category">
-                                    <a href="http://duruthemes.com/demo/html/pozo/light/project-page.html">06.</a>
+                                    <a href="PORTRAITS.html">06.</a>
                                 </span>
-                                <h5><a href="http://duruthemes.com/demo/html/pozo/light/project-page.html">Sport Photography</a></h5> <a href="http://duruthemes.com/demo/html/pozo/light/project-page.html"><i class="fa fa-long-arrow-right"></i></a>
+                                <h5><a href="PORTRAITS.html">PORTRAITS</a></h5> <a href="PORTRAITS.html"><i class="fa fa-long-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
