--- a/BABY_PHOTOSHOOT.html
+++ b/BABY_PHOTOSHOOT.html
@@ -93,7 +93,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-						<h2>15 años</h2>
+						<h2>Baby</h2>
 					</div>
 				</div>
 				<div class="row">
