--- a/15años.html
+++ b/15años.html
@@ -71,21 +71,22 @@
 		<div id="fh5co-page">
             
 
-		<header id="fh5co-header-section" class="sticky-banner">
-			<div class="container">
-				<div class="nav-header">
-					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Nuptial</a></h1>
-					<!-- START #fh5co-menu-wrap -->
-					<nav id="fh5co-menu-wrap" role="navigation">
-						<ul class="sf-menu" id="fh5co-primary-menu">
-							<li><a href="index.html" >Home</a></li>
-							<li class="active"><a href="gallery.html">Gallery</a></li>
-						</ul>
-					</nav>
+			<header id="fh5co-header-section" class="sticky-banner">
+				<div class="container">
+					<div class="nav-header">
+						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
+						<a href="index.html"> <img src="./images/logo/30002.png"  height="80"> </a>
+						<!-- START #fh5co-menu-wrap -->
+						<nav id="fh5co-menu-wrap" role="navigation">
+							<ul class="sf-menu" id="fh5co-primary-menu">
+								<li class="active"><a href="index.html" >Home</a></li>
+			
+								<li><a href="gallery.html">Gallery</a></li>
+							</ul>
+						</nav>
+					</div>
 				</div>
-			</div>
-		</header>
+			</header>
 
 		<!-- end:header-top -->
 
