--- a/gallery.html
+++ b/gallery.html
@@ -65,10 +65,7 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 	
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content=" width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="http://duruthemes.com/demo/html/pozo/light/images/favicon.png">
-    <title>P O Z O</title>
+
     <link href="./P O Z O_files/css/animate.css" rel="stylesheet" type="text/css">
     <link href="./P O Z O_files/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="./P O Z O_files/css/font-awesome.css" rel="stylesheet" type="text/css">
@@ -95,7 +92,8 @@
 				<div class="container">
 					<div class="nav-header">
 						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-						<a href="index.html">  </a>
+						<a class="navbar-brand animate-box"  href="index.html">
+							<img src="./images/logo/30002.png" class="logo" alt=""> </a>
 						<!-- START #fh5co-menu-wrap -->
 						<nav id="fh5co-menu-wrap" role="navigation">
 							<ul class="sf-menu" id="fh5co-primary-menu">
