--- a/gallery.html
+++ b/gallery.html
@@ -92,7 +92,7 @@
 				<div class="container">
 					<div class="nav-header">
 						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-						<a class="navbar-brand animate-box"  href="index.html">
+						<a class="navbar-brand animate-box fadeInUp animated" data-animate-effect="fadeInUp" href="index.html"> 
 							<img src="./images/logo/30002.png" class="logo" alt=""> </a>
 						<!-- START #fh5co-menu-wrap -->
 						<nav id="fh5co-menu-wrap" role="navigation">
