--- a/gallery.html
+++ b/gallery.html
@@ -173,6 +173,16 @@
                                 <h5><a href="PORTRAITS.html">PORTRAITS</a></h5> <a href="PORTRAITS.html"><i class="fa fa-long-arrow-right"></i></a>
                             </div>
                         </div>
+					</div>
+					<div class="col-md-4 animate-box fadeInUp animated" data-animate-effect="fadeInUp">
+                        <div class="item">
+                            <div class="position-re o-hidden"> <img src="images/shoots_at_home/DSC_0130.jpg" alt=""> </div>
+                            <div class="con"> <span class="category">
+                                    <a href="shoots_at_home.html">06.</a>
+                                </span>
+                                <h5><a href="shoots_at_home.html">shoots at home</a></h5> <a href="PORTRAITS.html"><i class="fa fa-long-arrow-right"></i></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
