--- a/gallery.html
+++ b/gallery.html
@@ -178,9 +178,19 @@
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="images/shoots_at_home/DSC_0130.jpg" alt=""> </div>
                             <div class="con"> <span class="category">
-                                    <a href="shoots_at_home.html">06.</a>
+                                    <a href="shoots_at_home.html">07.</a>
                                 </span>
-                                <h5><a href="shoots_at_home.html">shoots at home</a></h5> <a href="PORTRAITS.html"><i class="fa fa-long-arrow-right"></i></a>
+                                <h5><a href="shoots_at_home.html">shoots at home</a></h5> <a href="shoots_at_home.html"><i class="fa fa-long-arrow-right"></i></a>
+                            </div>
+                        </div>
+					</div>
+					<div class="col-md-4 animate-box fadeInUp animated" data-animate-effect="fadeInUp">
+                        <div class="item">
+                            <div class="position-re o-hidden"> <img src="images/producto/DSC_0779.jpg" alt=""> </div>
+                            <div class="con"> <span class="category">
+                                    <a href="Producto.html">08.</a>
+                                </span>
+                                <h5><a href="Producto.html">Producto</a></h5> <a href="Producto.html"><i class="fa fa-long-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
