--- a/15años.html
+++ b/15años.html
@@ -127,7 +127,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
-                            <h2>By Toledoki</h2>
+                            <h2>Karla Toledo photography</h2>
                         </div>
                         <div class="col-md-6 col-md-offset-3 text-center">
                             <p class="fh5co-social-icons">
