--- a/gallery.html
+++ b/gallery.html
@@ -99,7 +99,7 @@
 							<ul class="sf-menu" id="fh5co-primary-menu">
 								<li class="active"><a href="index.html" >Home</a></li>
 			
-								<li><a href="gallery.html">Gallery</a></li>
+								<li><a href="gallery.html">Photoshoots</a></li>
 							</ul>
 						</nav>
 					</div>
