--- a/gallery.html
+++ b/gallery.html
@@ -99,7 +99,9 @@
 							<ul class="sf-menu" id="fh5co-primary-menu">
 								<li class="active"><a href="index.html" >Home</a></li>
 			
-								<li><a href="gallery.html">Photoshoots</a></li>
+								<li><a href="gallery.html">Gallery</a></li>
+								<li><a href="About_me.html">About me</a></li>
+							<li><a href="contact.html">Work with me</a></li>   
 							</ul>
 						</nav>
 					</div>
@@ -112,7 +114,7 @@
             <div class="container">
                 <div class="row">
                     <div class="section-head col-md-12 text-center animate-box fadeInUp animated" data-animate-effect="fadeInUp">
-                        <h4>Projects</h4>
+                        <h4>Photoshoots</h4>
                     </div>
                     <div class="col-md-4 animate-box fadeInUp animated" data-animate-effect="fadeInUp">
                         <div class="item">
