--- a/Producto.html
+++ b/Producto.html
@@ -81,7 +81,9 @@
                             <ul class="sf-menu" id="fh5co-primary-menu">
                                 <li class="active"><a href="index.html" >Home</a></li>
             
-                                <li><a href="gallery.html">Gallery</a></li>
+								<li><a href="gallery.html">Gallery</a></li>
+								<li><a href="About_me.html">About me</a></li>
+							<li><a href="contact.html">Work with me</a></li>   
                             </ul>
                         </nav>
                     </div>
